--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "oauth2client (>=4.1.3,<5.0.0)",
     "requests (>=2.32.4,<3.0.0)",
     "yookassa (>=3.6.0,<4.0.0)",
-    "openai (>=1.98.0,<2.0.0)"
+    "openai (>=1.98.0,<2.0.0)",
+    "cryptography (>=45.0.6,<46.0.0)"
 ]
 
 
